<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 Stewart Gateley <birbeck@gmail.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string-array name="themes_array">
        <item>Nyan Cat</item>
        <item>Nyan Skrat</item>
    </string-array>
    <string-array name="themes_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="speed_array">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
    </string-array>
    <string-array name="speed_values">
        <item>200</item>
        <item>100</item>
        <item>50</item>
    </string-array>

    <string name="app_name">Nyan Cat Live</string>
    <string name="about">About:</string>
    <string name="app_description">Watch Nyan Cat race across your screen, featuring the most famous and unique Nyan Cat themes!</string>
    <string name="settings_activity">Nyan Cat Live settings</string>
    <string name="about_activity">About Nyan Cat Live</string>
    <string name="wallpaper_label">Nyan Cat Live</string>
    <string name="choose_theme">Choose Nyan Cat\'s Theme:</string>
    <string name="choose_speed">Choose Nyan Cat\'s Speed:</string>
    <string name="copyright">Copyright \u00A9 NightmareApps 2011</string>
    <string name="about_text">The different themes of Nyan Cat are taken from their original creator. If you created any of the images used, please contact us at NightmareApps@gmail.com \n \nVisit our website for the latest news and releases at http://www.NightmareApps.com If you like Nyan Cat Live, please leave a comment and rating on Google Play! \n \n</string>
    <string name="warning_scroll">All photos will be stretched to fill your home screens. If you use low resolution or portrait style photos, this can result in poor image quality. For best results, use wallpaper scrolling with desktop sized photos (640x480, 1024x768, etc).</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="settings">Settings</string>
    <string name="how_to_enable">Nyan Cat Live is a live wallpaper. Live wallpapers do not normally contain a launcher icon, meaning to set the live wallpaper as your home screen background, please perform the following steps:</string>
    <string name="how_to_enable_step1">        <![CDATA[Step 1: From Home Screen, press "Menu"]]>
    </string>
    <string name="how_to_enable_step2">        <![CDATA[Step 2: Press "Wallpaper", then press "Live Wallpapers"]]>
    </string>
    <string name="how_to_enable_step3">        <![CDATA[Step 3: Select the Live Wallpaper of choice]]>
    </string>
    <string name="how_to_enable_step4">        <![CDATA[Step 4: Press "Set wallpaper"]]>
    </string>
    <string name="how_to_enable_step5">        <![CDATA[To open the wallpaper selection screen now, press Set wallpaper]]>
    </string>
    <string name="version">"Version: "</string>

</resources>