<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/chooseThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/themeselector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_theme" />

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="8dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/chooseSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/speedselector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose_speed" />

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="8dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:autoLink="web"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/copyright"
        android:textStyle="italic" />

    <Button
        android:id="@+id/set_wallpaper"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginRight="6dip"
        android:layout_weight="1"
        android:text="@string/set_wallpaper" />

</LinearLayout>